some section added

--- a/index.html
+++ b/index.html
@@ -5,10 +5,157 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test</title>
     <link rel="stylesheet" href="./dist/css/app.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,700;0,800;1,300;1,400&family=Philosopher:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <p>Hii</p>
+<!-- Hero Section -->
 
+<section class="hero-section">
+    <div class="container h-100">
+        <div class="hero-text">
+            <p>Best Quality of Design</p>
+            <h1 class="hero-heading">Luxury Designer <br> Jwellery</h1>
+            <div class="link-text"> <a href="#">Shop Now &nbsp;<i class="fas fa-long-arrow-alt-right"></i></a></div>  
+        </div> 
+    </div>
+</section>
+<!-- end Hero Section -->
+
+ <!--Gallery section-->
+  <section class="gallery-sec">
+    <div class="container">
+        <div class="section-heading">
+            <h2 class="gallery-heading">Our Dazzling Collectins</h2>
+            <p class="gallery-heading-text">A bite from our buyers! </p>
+        </div>
+        <div class="row gx-5">
+            <div class="col-12 col-md-3">
+                <div class="gallery">
+                    <a class="overlay glightbox" data-gallery="gallery1" href="./src/images/design1.jpg">
+                        <i class="fas fa-eye"></i>
+                    </a>
+                    <img src="./src/images/design1.jpg" alt="" class="gallery-img">
+                </div>
+            </div>
+
+            <div class="col-12 col-md-3">
+                <div class="gallery">
+                    <a class="overlay glightbox" data-gallery="gallery1" href="./src/images/design2.jpg">
+                        <i class="fas fa-eye"></i>
+                    </a>
+                    <img src="./src/images/design2.jpg" alt="" class="gallery-img">
+                </div>
+            </div>
+            <div class="col-12 col-md-3">
+                <div class="gallery">
+                    <a class="overlay glightbox" data-gallery="gallery1" href="./src/images/design3.jpg">
+                        <i class="fas fa-eye"></i>
+                    </a>
+                    <img src="./src/images/design3.jpg" alt="" class="gallery-img">
+                </div>
+            </div>
+            <div class="col-12 col-md-3">
+                <div class="gallery">
+                    <a class="overlay glightbox" data-gallery="gallery1" href="./src/images/design4.jpg">
+                        <i class="fas fa-eye"></i>
+                    </a>
+                    <img src="./src/images/design4.jpg" alt="" class="gallery-img">
+                </div>
+            </div>
+    
+        <div class="btn-container">
+            <a href="#"><span>view more &nbsp;<i class="fas fa-long-arrow-alt-right"></i></span></a>
+        </div>
+    </div>
+</section>
+<!--End Gallery section-->
+
+<!-- Trends section starts -->
+
+<section class="trend-section">
+    <div class="container">
+        <div class="section-heading">
+            <h2 class="trend-heading">Fashion with Trends</h2>
+            <p class="trend-heading-text">A bite from our buyers! </p>
+        </div>
+        <div class="row">
+            <div class="fashion-container col-12">
+                <div class="left-fashion">
+                    <div class="slides">
+                        <div class="slide" style="background-image: url('./src/images/fashion1.jpg');">
+                            <div class="image"></div>
+                            <div class="overlay"></div>
+                            <div class="fontlayer">
+                                <h1 class="fashion-heading">Lorem ipsum <br> dolor sit amet,</h1>
+                                <p class="fashion-text">Lorem ipsum dolor sit amet</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="right-top-fashion">
+                    <div class="image"></div>
+                    <div class="overlay"></div>
+                    <div class="fontlayer">
+                        <h1 class="fashion-heading">Lorem ipsum <br> dolor sit amet,</h1>
+                        <p class="fashion-text">Lorem ipsum dolor sit amet</p>
+                    </div>
+                </div>
+                <div class="right-bottom-fashion">
+                    
+                </div>
+            </div>
+    </div>
+</section>
+
+<!-- Trends section ends -->
+
+<!-- reviews-starts -->
+<section class="review-section">
+    <div class="container">
+        <h2 class="review-heading">Customer Reviews</h2>
+        <div class="publish-review">
+            <div class="slide">                                                            
+                <div class="client-box">
+                    <div class="circle-container">
+                        <i class="fas fa-quote-left"></i>
+                    </div>                                            
+                    <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do  </p>
+                    <p class="name">-  Nikita sen</p>                                
+                </div>                                                                                                        
+            </div>
+            <div class="slide">                                                            
+                <div class="client-box">
+                    <div class="circle-container">
+                        <i class="fas fa-quote-left"></i>
+                    </div>                                            
+                    <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do</p>
+                    <p class="name">-  Nikita sen</p>                                
+                </div>                                                                                                        
+            </div>
+            <div class="slide">                                                            
+                <div class="client-box">
+                    <div class="circle-container">
+                        <i class="fas fa-quote-left"></i>
+                    </div>                                            
+                    <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do </p>
+                    <p class="name">-  Nikita sen</p>                                
+                </div>                                                                                                        
+            </div>
+            <div class="slide">                                                            
+                <div class="client-box">
+                    <div class="circle-container">
+                        <i class="fas fa-quote-left"></i>
+                    </div>                                            
+                    <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do </p>
+                    <p class="name">-  Nikita sen</p>                                
+                </div>                                                                                                        
+            </div>
+        </div>
+    </div>
+</section>
+<!--reviews-ends -->
     <script src="./dist/js/app.js"></script>
 </body>
 </html>
