fixed slide on treding section

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <section class="gallery-sec">
     <div class="container">
         <div class="section-heading">
-            <h2 class="gallery-heading">Our Dazzling Collectins</h2>
+            <h2 class="gallery-heading"><span>Our Dazzling Collectins</span></h2>
             <p class="gallery-heading-text">A bite from our buyers! </p>
         </div>
         <div class="row gx-5">
@@ -77,19 +77,43 @@
 <section class="trend-section">
     <div class="container">
         <div class="section-heading">
-            <h2 class="trend-heading">Fashion with Trends</h2>
+            <h2 class="trend-heading"><span>Fashion with Trends</span></h2>
             <p class="trend-heading-text">A bite from our buyers! </p>
         </div>
         <div class="row">
             <div class="fashion-container col-12">
                 <div class="left-fashion">
                     <div class="slides">
-                        <div class="slide" style="background-image: url('./src/images/fashion1.jpg');">
-                            <div class="image"></div>
-                            <div class="overlay"></div>
-                            <div class="fontlayer">
-                                <h1 class="fashion-heading">Lorem ipsum <br> dolor sit amet,</h1>
-                                <p class="fashion-text">Lorem ipsum dolor sit amet</p>
+                        <div class="slide">
+                            <div class="slide-main">
+                                <div class="image" style="background-image: url('./src/images/fashion1.jpg');"></div>
+                                <div class="overlay"></div>
+                                <div class="fontlayer">
+                                    <h1 class="fashion-heading">Lorem ipsum <br> dolor sit amet,</h1>
+                                    <p class="fashion-text">Lorem ipsum dolor sit amet</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="slide">
+                            <div class="slide-main">
+                                <div class="image" style="background-image: url('./src/images/fashion1.jpg');"></div>
+                                <div class="overlay"></div>
+                                <div class="fontlayer">
+                                    <h1 class="fashion-heading">Lorem ipsum <br> dolor sit amet,</h1>
+                                    <p class="fashion-text">Lorem ipsum dolor sit amet</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="slide">
+                            <div class="slide-main">
+                                <div class="image" style="background-image: url('./src/images/fashion1.jpg');"></div>
+                                <div class="overlay"></div>
+                                <div class="fontlayer">
+                                    <h1 class="fashion-heading">Lorem ipsum <br> dolor sit amet,</h1>
+                                    <p class="fashion-text">Lorem ipsum dolor sit amet</p>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -103,7 +127,12 @@
                     </div>
                 </div>
                 <div class="right-bottom-fashion">
-                    
+                    <div class="image"></div>
+                    <div class="overlay"></div>
+                    <div class="fontlayer">
+                        <h1 class="fashion-heading">Lorem ipsum <br> dolor sit amet,</h1>
+                        <p class="fashion-text">Lorem ipsum dolor sit amet</p>
+                    </div>
                 </div>
             </div>
     </div>
@@ -114,7 +143,7 @@
 <!-- reviews-starts -->
 <section class="review-section">
     <div class="container">
-        <h2 class="review-heading">Customer Reviews</h2>
+        <h2 class="review-heading"><span>Customer Reviews</span></h2>
         <div class="publish-review">
             <div class="slide">                                                            
                 <div class="client-box">
@@ -156,6 +185,6 @@
     </div>
 </section>
 <!--reviews-ends -->
-    <script src="./dist/js/app.js"></script>
+    <script src="./dist/js/app.js" defer></script>
 </body>
 </html>
