footer section add slide add and some modify

--- a/index.html
+++ b/index.html
@@ -11,20 +11,51 @@
 </head>
 <body>
 <!-- Hero Section -->
-
 <section class="hero-section">
-    <div class="container h-100">
-        <div class="hero-text">
-            <p>Best Quality of Design</p>
-            <h1 class="hero-heading">Luxury Designer <br> Jwellery</h1>
-            <div class="link-text"> <a href="#">Shop Now &nbsp;<i class="fas fa-long-arrow-alt-right"></i></a></div>  
-        </div> 
-    </div>
+    <div class="slides">
+        <div class="slide" style="background-image: url(./src/images/slider.jpg);">
+            <div class="slide-main">
+                <div class="hero-text">
+                    <p>Best Quality of Design</p>
+                    <h1 class="hero-heading">Luxury Designer <br> Jwellery</h1>
+                    <div class="link-text"><a href="#">Shop Now &nbsp;<i class="fas fa-long-arrow-alt-right"></i></a></div>
+                </div>
+            </div>
+        </div>  
+        <div class="slide" style="background-image: url(./src/images/slider.jpg);">
+            <div class="slide-main">
+                <div class="hero-text">
+                    <p>Best Quality of Design</p>
+                    <h1 class="hero-heading">Luxury Designer <br> Jwellery</h1>
+                    <div class="link-text"><a href="#">Shop Now &nbsp;<i class="fas fa-long-arrow-alt-right"></i></a></div>
+                </div>
+            </div>
+        </div>  
+        <div class="slide" style="background-image: url(./src/images/slider.jpg);">
+            <div class="slide-main">
+                <div class="hero-text">
+                    <p>Best Quality of Design</p>
+                    <h1 class="hero-heading">Luxury Designer <br> Jwellery</h1>
+                    <div class="link-text"><a href="#">Shop Now &nbsp;<i class="fas fa-long-arrow-alt-right"></i></a></div>
+                </div>
+            </div>
+        </div>  
+        <div class="slide" style="background-image: url(./src/images/slider.jpg);">
+            <div class="slide-main">
+                <div class="hero-text">
+                    <p>Best Quality of Design</p>
+                    <h1 class="hero-heading">Luxury Designer <br> Jwellery</h1>
+                    <div class="link-text"><a href="#">Shop Now &nbsp;<i class="fas fa-long-arrow-alt-right"></i></a></div>
+                </div>
+            </div>
+        </div>  
+    </div> 
 </section>
 <!-- end Hero Section -->
 
- <!--Gallery section-->
-  <section class="gallery-sec">
+<!--Gallery section-->
+
+<section class="gallery-sec">
     <div class="container">
         <div class="section-heading">
             <h2 class="gallery-heading"><span>Our Dazzling Collectins</span></h2>
@@ -70,6 +101,7 @@
         </div>
     </div>
 </section>
+
 <!--End Gallery section-->
 
 <!-- Trends section starts -->
@@ -140,7 +172,174 @@
 
 <!-- Trends section ends -->
 
+<!-- service section start -->
+
+<section class="service-section">
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-md-6">
+                <div class="service-main">
+                    <div class="image">
+                        <img src="./src/images/icon1.png" alt="" class="img-fluid">
+                    </div>
+                    <div class="service-text">
+                        <h3 class="service-top-text">Lorem ipsum</h3>
+                        <p class="text">Neque porro quisquam es<br> qui dolorem ipsum quia  </p>
+                    </div>
+                </div>  
+            </div>
+                <div class="col-12 col-md-6">
+                    <div class="service-main">
+                        <div class="image">
+                            <img src="./src/images/icon2.png" alt="" class="img-fluid">
+                        </div>
+                        <div class="service-text">
+                            <h3 class="service-top-text">Lorem ipsum</h3>
+                            <p class="text">Neque porro quisquam est<br> qui dolorem ipsum quia  </p>
+                        </div>
+                    </div>  
+                </div>
+            <div class="col-12 col-md-7">
+                    <div class="image">
+                        <img src="./src/images/icon3.png" alt="" class="img-fluid">
+                    </div>
+                        <div class="service-second-text">
+                            <h3 class="service-second-heading-text">Lorem ipsum</h3>
+                            <p class="second-text">Neque porro quisquam est<br> qui dolorem ipsum quia  </p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-5">
+                        <div class="image">
+                            <img src="./src/images/icon4.png" alt="" class="img-fluid">
+                        </div>
+                        <div class="service-second-text">
+                            <h3 class="service-second-heading-text">Lorem ipsum</h3>
+                            <p class="second-text">Neque porro quisquam est <br> qui dolorem ipsum quia  </p>
+                        </div>
+                    </div>
+            </div>  
+        </div>
+    </div>
+</section>
+
+<!-- service section end -->
+
+<!--start popular design section -->
+
+<section class="popular-design-sec">
+    <div class="container">
+        <ul class="nav justify-content-end nav-pills mb-3 project-pill mb-5" id="pills-tab" role="tablist">
+            <li class="nav-item" role="presentation">
+              <a class="nav-link orange-pill" id="pills-home-tab" data-toggle="pill" href="#" role="tab" aria-controls="pills-home" aria-selected="true">Bestseller </a>
+            </li>
+            <li class="nav-item" role="presentation">
+              <a class="nav-link orange-pill" id="pills-profile-tab" data-toggle="pill" href="#" role="tab" aria-controls="pills-profile" aria-selected="false">New Arrivals </a>
+            </li>
+            <li class="nav-item" role="presentation">
+              <a class="nav-link orange-pill" id="pills-contact-tab" data-toggle="pill" href="#" role="tab" aria-controls="pills-contact" aria-selected="false"> Curated Pages   </a>
+            </li>
+        </ul>
+        <div class="row">
+            <div class="col-md-6 col-12">
+                <div class="popular-design">
+                    <h2 class="popular-design-heading">
+                        Discover Our Popular Designs   
+                    </h2>
+                    <p class="popular-design-text">
+                        Our most loved designs deserve a worthy
+                        mention and here they are!
+                    </p>
+                    <div class="btn-container">
+                        <a href="#" class="btn">View All Products</a>
+                    </div>
+                </div>
+            </div>
+           <div class="col-md-6">
+               <div class="row m-0 gy-4">
+                   <div class="product col-md-6">
+                       <div class="img-container h-100 w-100">
+                           <a href="#"><img src="./src/images/popular_design1.jpg"alt="" class="img-fluid"></a>
+                        </div>    
+                   </div>
+                   <div class="product col-md-6">
+                    <div class="img-container h-100 w-100">
+                         <a href="#"><img src="./src/images/popular_design2.jpg"alt="" class="img-fluid"></a>
+                        </div>
+                </div>
+                <div class="product col-md-6">
+                    <div class="img-container h-100 w-100">
+                        <a href="#"><img src="./src/images/popular_design3.jpg"alt="" class="img-fluid"></a>
+                    </div>    
+                </div>
+                <div class="product col-md-6">
+                    <div class="img-container h-100 w-100">
+                        <a href="#"><img src="./src/images/popular_design4.jpg"alt="" class="img-fluid"></a>
+                    </div>
+                </div>
+               </div>
+           </div> 
+        </div>
+    </div>
+</section>
+
+<!--end popular design section -->
+
+<!-- start styling section -->
+
+<section class="styling-sec">
+    <div class="container">
+        <div class="section-heading">
+            <h2 class="styling-heading"><span>Styling Diva Colections</span></h2>
+        </div>
+        <div class="row gx-5">
+            <div class="col-12 col-md-3">
+                <div class="styling">
+                    <img src="./src/images/styling1.jpg" alt="" class="img-fluid">
+                </div>
+            </div>
+
+            <div class="col-12 col-md-3">
+                <div class="styling">
+                    <img src="./src/images/styling2.jpg" alt="" class="img-fluid">
+                </div>
+            </div>
+            <div class="col-12 col-md-3">
+                <div class="styling">
+                    <img src="./src/images/styling3.jpg" alt="" class="img-fluid">
+                </div>
+            </div>
+            <div class="col-12 col-md-3">
+                <div class="styling">
+                    <img src="./src/images/styling4.jpg" alt="" class="img-fluid">
+                </div>
+            </div>
+    </div>
+</section>
+
+<!-- end styling section -->
+
+<!-- subscribe section start -->
+
+<section class="subscribe-sec">
+    <div class="container">
+        <div class="row">
+            <div class="subscribe-heading-text">
+                  <h2 class="heading">Subscribe to our BDazzling</h2>
+                  <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
+                  <form action="">
+                    <input type="text" placeholder="Type Here!" name="search2">
+                    <button type="submit">SUBSCRIBE</button>
+                  </form>
+                  <p class="bottom-text">Lorem ipsum dolor sit amet, consectetur</p>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- subscribe section end -->
+
 <!-- reviews-starts -->
+
 <section class="review-section">
     <div class="container">
         <h2 class="review-heading"><span>Customer Reviews</span></h2>
@@ -184,7 +383,103 @@
         </div>
     </div>
 </section>
+
 <!--reviews-ends -->
+
+ <!-- Footer-section -->
+ <footer class="footer-sec">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-12 col-md-4">
+                <div class="footer-text">
+                    <img src="./src/images/bnw no grad 1.png" alt="">
+                    <ul>
+                        <h3 class="footertext">Join our <br>
+                            mailing list</h3>
+                        <p class="text">
+                            Sign up for diamond news,<br>
+                            inspiration, and specials.</p>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-12 col-md-3">
+                <div class="footer-text">
+                    <h4 class="footer-heading">Information</h4>
+                    <ul>
+                        <li><a href="#">Search</a></li>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">FAQ </a></li>
+                        <li><a href="#">Payment Options</a></li>
+                        <li><a href="#">Wholesale</a></li>
+                        <li><a href="#">What Our Customers Say</a></li>
+                        <li><a href="#">Careers</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-12 col-md-2">
+                <div class="footer-text">
+                    <h4 class="footer-heading">Policies</h4>
+                    <ul>
+                        <li><a href="#">Shipping Policy</a></li>
+                        <li><a href="#">Return Policy</a></li>
+                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="#">Terms & Conditions</a></li>
+                        <li><a href="#">Disclaimer</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-12 col-md-3">
+                <div class="footer-text">
+                    <h4 class="footer-heading">Account Information</h4>
+                    <ul>
+                        <li><a href="#">Login</a></li>
+                        <li><a href="#">Sign Up</a> </li>
+                        <li><a href="#">My Account</a></li>
+                        <li><a href="#">Track Your Order</a></li>
+                        <li><a href="#">Checkout</a></li>
+                        <li><a href="#">Need Help? Contact us</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-md-12 d-flex">
+                <div class="social-media-footer">
+                    <ul class="footer-menuicon">
+                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                        <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                        <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+                    </ul>
+                </div>
+                <div class="footer-bottom-menu">
+                    <ul class="d-flex justify-content-between"> 
+                        <li><a href="#">Press </a></li>
+                        <li><a href="#"> Imitation professional </a> </li>
+                        <li><a href="#">Terms of services </a></li>
+                        <li><a href="#">Track Your Order</a></li>
+                        <li><a href="#"> Privacxcy policy  </a></li>
+                        <li><a href="#">Excersize my rights</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
+<!-- End Footer-section -->
+
+<!-- copyright section -->
+<section class="copy-right">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12 col-md-12">
+                <p class="copyright-text">
+                    Copy right @ <a href="https://thinktoshare.com/">Think To Share</a> 
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- end copyright section -->
+
     <script src="./dist/js/app.js" defer></script>
 </body>
 </html>
