--- a/index.html
+++ b/index.html
@@ -10,6 +10,53 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,700;0,800;1,300;1,400&family=Philosopher:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
+
+    <header class="page-header">
+        <div class="container">
+            <div class="d-flex">
+                <div class="logo-side">
+                    <img
+                        src="./src/images/bnw no grad 1.png"
+                        alt="Site Logo"
+                        class="logo"
+                    />
+                </div>
+                <div class="menu-side">
+                    <ul class="menu-container">
+                        <li>
+                            <a href="#">HOME</a>
+                        </li>
+                        <li>
+                            <a href="#">GIFTS</a>
+                        </li>
+                        <li>
+                            <a href="#">TYPE</a>
+                        </li>
+                        <li>
+                            <a href="#">ABOUT US</a>
+                        </li>
+                        <li>
+                            <a href="#">COLLECTIONS</a>
+                        </li>
+                        
+                    </ul>
+
+                </div>
+                <div class="menu-icon">
+                    <ul>
+                        <li>
+                            <a href="#"><i class="fas fa-shopping-bag"></i></a>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fas fa-search"></i></a>
+                        </li>
+                    </ul>  
+                </div>
+                <!-- </div> -->
+            </div>
+        </div>
+    </header>
+
 <!-- Hero Section -->
 <section class="hero-section">
     <div class="slides">
@@ -123,6 +170,7 @@
                                 <div class="fontlayer">
                                     <h1 class="fashion-heading">Lorem ipsum <br> dolor sit amet,</h1>
                                     <p class="fashion-text">Lorem ipsum dolor sit amet</p>
+                                    <a href="#">Read more &nbsp;<i class="fas fa-long-arrow-alt-right"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -134,6 +182,7 @@
                                 <div class="fontlayer">
                                     <h1 class="fashion-heading">Lorem ipsum <br> dolor sit amet,</h1>
                                     <p class="fashion-text">Lorem ipsum dolor sit amet</p>
+                                    <a href="#">Read more &nbsp;<i class="fas fa-long-arrow-alt-right"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -145,6 +194,7 @@
                                 <div class="fontlayer">
                                     <h1 class="fashion-heading">Lorem ipsum <br> dolor sit amet,</h1>
                                     <p class="fashion-text">Lorem ipsum dolor sit amet</p>
+                                    <a href="#">Read more &nbsp;<i class="fas fa-long-arrow-alt-right"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -156,6 +206,7 @@
                     <div class="fontlayer">
                         <h1 class="fashion-heading">Lorem ipsum <br> dolor sit amet,</h1>
                         <p class="fashion-text">Lorem ipsum dolor sit amet</p>
+                        <a href="#">Read more</a>
                     </div>
                 </div>
                 <div class="right-bottom-fashion">
@@ -164,6 +215,7 @@
                     <div class="fontlayer">
                         <h1 class="fashion-heading">Lorem ipsum <br> dolor sit amet,</h1>
                         <p class="fashion-text">Lorem ipsum dolor sit amet</p>
+                        
                     </div>
                 </div>
             </div>
@@ -199,26 +251,29 @@
                         </div>
                     </div>  
                 </div>
-            <div class="col-12 col-md-7">
+            <div class="col-12 col-md-6 offset-md-1">
+                <div class="service-main">
                     <div class="image">
                         <img src="./src/images/icon3.png" alt="" class="img-fluid">
                     </div>
-                        <div class="service-second-text">
-                            <h3 class="service-second-heading-text">Lorem ipsum</h3>
-                            <p class="second-text">Neque porro quisquam est<br> qui dolorem ipsum quia  </p>
-                        </div>
+                    <div class="service-text">
+                        <h3 class="service-top-text">Lorem ipsum</h3>
+                        <p class="text">Neque porro quisquam est<br> qui dolorem ipsum quia  </p>
                     </div>
-                    <div class="col-12 col-md-5">
-                        <div class="image">
-                            <img src="./src/images/icon4.png" alt="" class="img-fluid">
-                        </div>
-                        <div class="service-second-text">
-                            <h3 class="service-second-heading-text">Lorem ipsum</h3>
-                            <p class="second-text">Neque porro quisquam est <br> qui dolorem ipsum quia  </p>
-                        </div>
+                </div> 
+            </div>
+            <div class="col-12 col-md-5">
+                <div class="service-main">
+                    <div class="image">
+                        <img src="./src/images/icon4.png" alt="" class="img-fluid">
                     </div>
-            </div>  
-        </div>
+                    <div class="service-text">
+                        <h3 class="service-top-text">Lorem ipsum</h3>
+                        <p class="text">Neque porro quisquam est<br> qui dolorem ipsum quia  </p>
+                    </div>
+                </div> 
+            </div> 
+        </div> 
     </div>
 </section>
 
@@ -227,18 +282,7 @@
 <!--start popular design section -->
 
 <section class="popular-design-sec">
-    <div class="container">
-        <ul class="nav justify-content-end nav-pills mb-3 project-pill mb-5" id="pills-tab" role="tablist">
-            <li class="nav-item" role="presentation">
-              <a class="nav-link orange-pill" id="pills-home-tab" data-toggle="pill" href="#" role="tab" aria-controls="pills-home" aria-selected="true">Bestseller </a>
-            </li>
-            <li class="nav-item" role="presentation">
-              <a class="nav-link orange-pill" id="pills-profile-tab" data-toggle="pill" href="#" role="tab" aria-controls="pills-profile" aria-selected="false">New Arrivals </a>
-            </li>
-            <li class="nav-item" role="presentation">
-              <a class="nav-link orange-pill" id="pills-contact-tab" data-toggle="pill" href="#" role="tab" aria-controls="pills-contact" aria-selected="false"> Curated Pages   </a>
-            </li>
-        </ul>
+    <div class="container"> 
         <div class="row">
             <div class="col-md-6 col-12">
                 <div class="popular-design">
@@ -255,28 +299,90 @@
                 </div>
             </div>
            <div class="col-md-6">
-               <div class="row m-0 gy-4">
-                   <div class="product col-md-6">
-                       <div class="img-container h-100 w-100">
-                           <a href="#"><img src="./src/images/popular_design1.jpg"alt="" class="img-fluid"></a>
-                        </div>    
-                   </div>
-                   <div class="product col-md-6">
-                    <div class="img-container h-100 w-100">
-                         <a href="#"><img src="./src/images/popular_design2.jpg"alt="" class="img-fluid"></a>
+            <ul class="nav nav-tabs" id="myTab" role="tablist">
+                <li class="nav-item" role="presentation">
+                  <button class="nav-link active" id="Bestseller-tab" data-bs-toggle="tab" data-bs-target="#Bestseller" type="button" role="tab" aria-controls="Bestseller" aria-selected="true">Bestseller</button>
+                </li>
+                <li class="nav-item" role="presentation">
+                  <button class="nav-link" id="Arrivals-tab" data-bs-toggle="tab" data-bs-target="#Arrivals" type="button" role="tab" aria-controls="Arrivals" aria-selected="false">New Arrivals</button>
+                </li>
+                <li class="nav-item" role="presentation">
+                  <button class="nav-link" id="Curated-tab" data-bs-toggle="tab" data-bs-target="#Curated" type="button" role="tab" aria-controls="Curated" aria-selected="false">Curated pages</button>
+                </li>
+              </ul>
+              <div class="tab-content" id="myTabContent">
+                <div class="tab-pane fade show active" id="Bestseller" role="tabpanel" aria-labelledby="Bestseller-tab">
+                    <div class="row m-0 gy-4">
+                        <div class="product col-md-6">
+                            <div class="img-container h-100 w-100">
+                                <a href="#"><img src="./src/images/popular_design1.jpg"alt="" class="img-fluid"></a>
+                             </div>    
                         </div>
-                </div>
-                <div class="product col-md-6">
-                    <div class="img-container h-100 w-100">
-                        <a href="#"><img src="./src/images/popular_design3.jpg"alt="" class="img-fluid"></a>
-                    </div>    
-                </div>
-                <div class="product col-md-6">
-                    <div class="img-container h-100 w-100">
-                        <a href="#"><img src="./src/images/popular_design4.jpg"alt="" class="img-fluid"></a>
+                        <div class="product col-md-6">
+                            <div class="img-container h-100 w-100">
+                                <a href="#"><img src="./src/images/popular_design2.jpg"alt="" class="img-fluid"></a>
+                            </div>
+                        </div>
+                        <div class="product col-md-6">
+                            <div class="img-container h-100 w-100">
+                                <a href="#"><img src="./src/images/popular_design3.jpg"alt="" class="img-fluid"></a>
+                            </div>    
+                        </div>
+                        <div class="product col-md-6">
+                            <div class="img-container h-100 w-100">
+                                <a href="#"><img src="./src/images/popular_design4.jpg"alt="" class="img-fluid"></a>
+                            </div>
+                        </div>
                     </div>
                 </div>
-               </div>
+                <div class="tab-pane fade" id="Arrivals" role="tabpanel" aria-labelledby="Arrivals-tab">
+                    <div class="row m-0 gy-4">
+                        <div class="product col-md-6">
+                            <div class="img-container h-100 w-100">
+                                <a href="#"><img src="./src/images/popular_design1.jpg"alt="" class="img-fluid"></a>
+                            </div>    
+                        </div>
+                    <div class="product col-md-6">
+                     <div class="img-container h-100 w-100">
+                          <a href="#"><img src="./src/images/popular_design2.jpg"alt="" class="img-fluid"></a>
+                         </div>
+                 </div>
+                 <div class="product col-md-6">
+                     <div class="img-container h-100 w-100">
+                         <a href="#"><img src="./src/images/popular_design3.jpg"alt="" class="img-fluid"></a>
+                     </div>    
+                 </div>
+                 <div class="product col-md-6">
+                     <div class="img-container h-100 w-100">
+                         <a href="#"><img src="./src/images/popular_design4.jpg"alt="" class="img-fluid"></a>
+                     </div>
+                 </div>
+                </div></div>
+                <div class="tab-pane fade" id="Curated" role="tabpanel" aria-labelledby="Curated-tab">
+                    <div class="row m-0 gy-4">
+                        <div class="product col-md-6">
+                            <div class="img-container h-100 w-100">
+                                <a href="#"><img src="./src/images/popular_design1.jpg"alt="" class="img-fluid"></a>
+                            </div>    
+                        </div>
+                        <div class="product col-md-6">
+                            <div class="img-container h-100 w-100">
+                            <a href="#"><img src="./src/images/popular_design2.jpg"alt="" class="img-fluid"></a>
+                            </div>
+                        </div>
+                        <div class="product col-md-6">
+                            <div class="img-container h-100 w-100">
+                                <a href="#"><img src="./src/images/popular_design3.jpg"alt="" class="img-fluid"></a>
+                            </div>    
+                        </div>
+                        <div class="product col-md-6">
+                            <div class="img-container h-100 w-100">
+                                <a href="#"><img src="./src/images/popular_design4.jpg"alt="" class="img-fluid"></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
            </div> 
         </div>
     </div>
