--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="./dist/css/app.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,700;0,800;1,300;1,400&family=Philosopher:wght@400;700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400&family=Philosopher:wght@400;700&display=swap" rel="stylesheet">
     </head>
     <body>
         <header class="page-header">
@@ -60,7 +60,7 @@
                     <div class="slide-main">
                         <div class="hero-text">
                             <p>Best Quality of Design</p>
-                            <h1 class="hero-heading">Luxury Designer <br> Jwellery</h1>
+                            <h1 class="hero-heading"><span>Luxury Designer <br> Jwellery</span></h1>
                             <div class="link-text"><a href="#">Shop Now &nbsp;<i class="fas fa-long-arrow-alt-right"></i></a></div>
                         </div>
                     </div>
@@ -69,7 +69,7 @@
                     <div class="slide-main">
                         <div class="hero-text">
                             <p>Best Quality of Design</p>
-                            <h1 class="hero-heading">Luxury Designer <br> Jwellery</h1>
+                            <h1 class="hero-heading"><span>Luxury Designer <br> Jwellery</span></h1>
                             <div class="link-text"><a href="#">Shop Now &nbsp;<i class="fas fa-long-arrow-alt-right"></i></a></div>
                         </div>
                     </div>
@@ -78,7 +78,7 @@
                     <div class="slide-main">
                         <div class="hero-text">
                             <p>Best Quality of Design</p>
-                            <h1 class="hero-heading">Luxury Designer <br> Jwellery</h1>
+                            <h1 class="hero-heading"><span>Luxury Designer <br> Jwellery</span></h1>
                             <div class="link-text"><a href="#">Shop Now &nbsp;<i class="fas fa-long-arrow-alt-right"></i></a></div>
                         </div>
                     </div>
@@ -87,7 +87,7 @@
                     <div class="slide-main">
                         <div class="hero-text">
                             <p>Best Quality of Design</p>
-                            <h1 class="hero-heading">Luxury Designer <br> Jwellery</h1>
+                            <h1 class="hero-heading"><span>Luxury Designer <br> Jwellery</span></h1>
                             <div class="link-text"><a href="#">Shop Now &nbsp;<i class="fas fa-long-arrow-alt-right"></i></a></div>
                         </div>
                     </div>
@@ -522,7 +522,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-md-12 d-flex">
+                    <div class="col-md-12 d-flex justify-content-center">
                         <div class="social-media-footer">
                             <ul class="footer-menuicon">
                                 <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
