--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <div class="d-flex">
                     <div class="logo-side">
                         <img
-                            src="./src/images/bnw no grad 1.png"
+                            src="./src/images/logo.png"
                             alt="Site Logo"
                             class="logo"
                             />
@@ -145,7 +145,7 @@
         <section class="trend-section">
             <div class="container">
             <div class="section-heading">
-                <h2 class="trend-heading"><span>Fashion with Trends</span></h2>
+                <h2 class="trend-heading wow bounceInUp"><span>Fashion with Trends</span></h2>
                 <p class="trend-heading-text">A bite from our buyers! </p>
             </div>
             <div class="row">
