--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                             />
                     </div>
                     <div class="menu-side">
-                        <ul class="menu-container">
+                        <ul>
                             <li>
                                 <a href="#">HOME</a>
                             </li>
@@ -274,7 +274,7 @@
                                 mention and here they are!
                             </p>
                             <div class="btn-container">
-                                <a href="#" class="btn">View All Products</a>
+                                <a href="#" class="button"><span>View All Products</span></a>
                             </div>
                         </div>
                     </div>
@@ -531,7 +531,7 @@
                                 <li><a href="#"><i class="fab fa-youtube"></i></a></li>
                             </ul>
                         </div>
-                        <div class="footer-bottom-menu">
+                        <!-- <div class="footer-bottom-menu">
                             <ul class="d-flex justify-content-between">
                                 <li><a href="#">Press </a></li>
                                 <li><a href="#"> Imitation professional </a> </li>
@@ -540,7 +540,7 @@
                                 <li><a href="#"> Privacxcy policy  </a></li>
                                 <li><a href="#">Excersize my rights</a></li>
                             </ul>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
