--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                 <p class="top-bar-text"></p>
             </div>
         <!-- </section> -->
+
         <!-- Hero Section -->
         <section class="hero-section">
             <div class="slides">
@@ -101,6 +102,7 @@
             </div>
         </section>
         <!-- end Hero Section -->
+
         <!--Gallery section-->
         <section class="gallery-sec">
             <div class="container">
@@ -147,6 +149,7 @@
             </div>
         </section>
         <!--End Gallery section-->
+
         <!-- Trends section starts -->
         <section class="trend-section">
             <div class="container">
@@ -193,7 +196,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="right-top-left-fashion">
+                        <div class="right-top-fashion">
                             <div class="slides2">
                                 <div class="slide">
                                     <div class="slide-main">
@@ -219,60 +222,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="right-top-right-fashion">
+                        <div class="right-bottom-fashion">
                             <div class="slides3">
-                                <div class="slide">
-                                    <div class="slide-main">
-                                        <div class="image" style="background-image: url('./src/images/fashion1.jpg');"></div>
-                                        <div class="overlay"></div>
-                                        <!-- <div class="fontlayer">
-                                            <h1 class="fashion-heading">Lorem ipsum <br> dolor sit amet,</h1>
-                                            <p class="fashion-text">Lorem ipsum dolor sit amet</p>
-                                            <a href="#">Read more &nbsp;<i class="fas fa-long-arrow-alt-right"></i></a>
-                                        </div> -->
-                                    </div>    
-                                </div>
-                                <div class="slide">
-                                    <div class="slide-main">
-                                        <div class="image" style="background-image: url('./src/images/fashion1.jpg');"></div>
-                                        <div class="overlay"></div>
-                                        <!-- <div class="fontlayer">
-                                            <h1 class="fashion-heading">Lorem ipsum <br> dolor sit amet,</h1>
-                                            <p class="fashion-text">Lorem ipsum dolor sit amet</p>
-                                            <a href="#">Read more &nbsp;<i class="fas fa-long-arrow-alt-right"></i></a>
-                                        </div> -->
-                                    </div>    
-                                </div>
-                            </div>
-                        </div>
-                        <div class="right-bottom-left-fashion">
-                            <div class="slides4">
-                                <div class="slide">
-                                    <div class="slide-main">
-                                        <div class="image" style="background-image: url('./src/images/fashion1.jpg');"></div>
-                                        <div class="overlay"></div>
-                                        <!-- <div class="fontlayer">
-                                            <h1 class="fashion-heading">Lorem ipsum <br> dolor sit amet,</h1>
-                                            <p class="fashion-text">Lorem ipsum dolor sit amet</p>
-                                            <a href="#">Read more &nbsp;<i class="fas fa-long-arrow-alt-right"></i></a>
-                                        </div> -->
-                                    </div>    
-                                </div>
-                                <div class="slide">
-                                    <div class="slide-main">
-                                        <div class="image" style="background-image: url('./src/images/fashion1.jpg');"></div>
-                                        <div class="overlay"></div>
-                                        <!-- <div class="fontlayer">
-                                            <h1 class="fashion-heading">Lorem ipsum <br> dolor sit amet,</h1>
-                                            <p class="fashion-text">Lorem ipsum dolor sit amet</p>
-                                            <a href="#">Read more &nbsp;<i class="fas fa-long-arrow-alt-right"></i></a>
-                                        </div> -->
-                                    </div>    
-                                </div>
-                            </div>
-                        </div>
-                        <div class="right-bottom-right-fashion">
-                            <div class="slides5">
                                 <div class="slide">
                                     <div class="slide-main">
                                         <div class="image" style="background-image: url('./src/images/fashion1.jpg');"></div>
@@ -302,6 +253,7 @@
             </div>
         </section>
         <!-- Trends section ends -->
+
         <!-- service section start -->
         <section class="service-section">
             <div class="container">
@@ -354,6 +306,7 @@
             </div>
         </section>
         <!-- service section end -->
+
         <!--start popular design section -->
         <section class="popular-design-sec">
             <div class="container">
@@ -463,6 +416,7 @@
             </div>
         </section>
         <!--end popular design section -->
+
         <!-- start styling section -->
         <section class="styling-sec">
             <div class="container">
