added more slide in trending section

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 </div>
                 <div class="row">
                     <div class="fashion-container col-12">
-                        <div class="left-fashion">
+                        <div class="left-fashion fashion">
                             <div class="slides">
                                 <div class="slide">
                                     <div class="slide-main">
@@ -196,8 +196,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="right-top-fashion">
-                            <div class="slides2">
+                        <div class="right-top-fashion fashion">
+                            <div class="slides">
                                 <div class="slide">
                                     <div class="slide-main">
                                         <div class="image" style="background-image: url('./src/images/fashion1.jpg');"></div>
@@ -222,8 +222,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="right-bottom-fashion">
-                            <div class="slides3">
+                        <div class="right-bottom-fashion fashion">
+                            <div class="slides">
                                 <div class="slide">
                                     <div class="slide-main">
                                         <div class="image" style="background-image: url('./src/images/fashion1.jpg');"></div>
@@ -244,6 +244,40 @@
                                             <p class="fashion-text">Lorem ipsum dolor sit amet</p>
                                             <a href="#">Read more &nbsp;<i class="fas fa-long-arrow-alt-right"></i></a>
                                         </div> -->
+                                    </div>    
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="right-top-right-fashion fashion">
+                            <div class="slides">
+                                <div class="slide">
+                                    <div class="slide-main">
+                                        <div class="image" style="background-image: url('./src/images/fashion1.jpg');"></div>
+                                        <div class="overlay"></div>
+                                    </div>    
+                                </div>
+                                <div class="slide">
+                                    <div class="slide-main">
+                                        <div class="image" style="background-image: url('./src/images/fashion1.jpg');"></div>
+                                        <div class="overlay"></div>
+                                    </div>    
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="right-bottom-right-fashion fashion">
+                            <div class="slides">
+                                <div class="slide">
+                                    <div class="slide-main">
+                                        <div class="image" style="background-image: url('./src/images/fashion1.jpg');"></div>
+                                        <div class="overlay"></div>
+                                    </div>    
+                                </div>
+                                <div class="slide">
+                                    <div class="slide-main">
+                                        <div class="image" style="background-image: url('./src/images/fashion1.jpg');"></div>
+                                        <div class="overlay"></div>
                                     </div>    
                                 </div>
                             </div>
