--- a/index.html
+++ b/index.html
@@ -56,7 +56,14 @@
         </header>
         <!-- <section class="header-sec">     -->
             <div class="top-bar">
-                <p class="top-bar-text"></p>
+                <div class="slides">
+                    <div class="slide">
+                        <p class="top-bar-text">Best Quality of Design</p>
+                    </div>
+                    <div class="slide">
+                        <p class="top-bar-text">Best Quality of Design</p>
+                    </div>
+                </div>
             </div>
         <!-- </section> -->
 
